# multitax

./: .gitignore  .travis.yml  LICENSE  README.md  VERSION.txt  make_docs.sh  pre-commit.sh  pyproject.toml  requirements.txt  setup.py  test.py
docs/: index.html  multitax.html  search.js
docs/multitax/: multitax.html  utils.html
multitax/: __init__.py  customtx.py  dummytx.py  emptytx.py  greengenestx.py  gtdbtx.py  multitax.py  ncbitx.py  otttx.py  silvatx.py  utils.py
src/multitax/: __init__.py  customtx.py  dummytx.py  greengenestx.py  gtdbtx.py  multitax.py  ncbitx.py  otttx.py  silvatx.py  utils.py
tests/multitax/: utils.py
tests/multitax/data_minimal/: ott.tgz
tests/multitax/integration/: test_common.py  test_dummy.py  test_empty.py  test_ncbi.py  test_online.py  test_ott.py  utils.py
tests/multitax/integration/data_minimal/: ott.tgz
tests/multitax/unit/: test_functions.py  test_init.py  test_utils.py
