[project]
name = "multitax"
dynamic = [ "version" ]
description = "Python package to obtain, parse and explore biological and custom taxonomies."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/pirovc/multitax"
Documentation = "https://pirovc.github.io/multitax"
Repository = "https://github.com/pirovc/multitax"

[project.optional-dependencies]
dev = [ "ruff", "coverage", "pdoc" ]

[build-system]
requires = [ "setuptools>=80", "setuptools_scm>=8" ]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools_scm]
write_to = "VERSION.txt"

[tool.ruff]
include = [ "pyproject.toml", "multitax/*.py" ]